fix: 코드 리뷰 지적사항 전체 수정
보안
- LlmQueryPreprocessAdapter: warn 로그에서 query/LLM 응답 전체 제거 → responseLen만 로깅
- OpenAiGuardrailAdapter: warn 로그에서 LLM 응답 전체 제거 → responseLen만 로깅

예외 계층 일관성
- DouzoneEmbeddingException: RuntimeException → LlmException(EMBEDDING_FAILED) 상속으로 변경
- RagExceptionAdvice: 중복 DouzoneEmbeddingException 핸들러 제거 (LlmException 핸들러가 처리)

도메인 모델 null 방어
- HybridSearchRequest: compact constructor로 query/keywordQuery/vectorQuery null 체크 추가
- IngestionRequest: compact constructor로 docId null 체크 추가

NoOpQueryPreprocessAdapter 추가
- rag.query-preprocess.enabled=false 시 원문 쿼리 그대로 사용 (로컬 개발 LLM 비용 절감)
- LlmQueryPreprocessAdapter에 @ConditionalOnProperty(matchIfMissing=true) 추가

코드 품질
- PgKeywordSearchAdapter: raw Map.class → TypeReference<Map<String, Object>> 로 교체
- SpringAiVectorSearchAdapter: Collectors.toList() → .toList() 통일

운영 안전
- application.yaml: spring.sql.init.mode 기본값 always → never 변경
- application-local.yaml 추가 (local 프로파일: in-memory, 가드레일/전처리 비활성화, 스키마 자동 초기화)

문서
- CLAUDE.md: 포트 테이블, 예외 계층, 어댑터 조건 목록, 환경별 설정 표, 실행 명령 업데이트
- README.md: 주요 설정 표, 쿼리 전처리 섹션, 로컬 실행 명령 업데이트

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>